Fixing some text overflow

--- a/assets/stylesheets/main.styl
+++ b/assets/stylesheets/main.styl
@@ -234,17 +234,26 @@ ul {
             width:100%;
             height:100%;
             display:block;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
         }
         
         label:hover {
             background-color: rgba(255,255,255,0.2) !important;
             border-radius: 5vh !important;
             cursor:pointer;
+            text-overflow: initial;
+            white-space: normal;
+            overflow: visible;
         }
         
         label.added-module {
             background-color:white !important;
             border-radius: 5vh;
+            text-overflow: initial;
+            white-space: normal;
+            overflow: visible;
         }
 
         a {
@@ -267,7 +276,11 @@ ul {
         p {
             font-size:0.9em;
             margin:0px;
+            text-overflow: inherit;
+            white-space: inherit;
+            overflow: inherit;
         }
+        
     }
     a {
             width:auto;
